--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,17 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print" />
-    
-    <title>{{ page.title }} &larr; {{ page.top }}</title>
-    <meta name="author" content="shuiruge"/>
-  </head>
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	
+		<title>{{ page.title }}</title>
+	</head>
 
 
-  <body id="{{ page.section }}">
-    
+	<body>
 
-    <div id="site">
-      
-      {{ content }}
-            
-    </div>
+		{{ content }}
 
+	</body>
 
-  </body>
 </html>
