--- a/_layouts/blog-post.html
+++ b/_layouts/blog-post.html
@@ -7,30 +7,12 @@ top: blog-post
 <div id="page">
 
 
-    <h2 class="post_title">
-        {{ page.title }}
-    </h2>
-
-
     {{ content }}
 
 
     {% if page.comments %}
-        
-        <div id="disqus_thread"></div>
-	<script type="text/javascript">
-            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'shuirugegithubio'; // required: replace example with your forum shortname
-  
-            /* * * DON'T EDIT BELOW THIS LINE * * */
-            (function() {
-                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-	        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-	    })();
-	</script>
-	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-	<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+
+        {% include disqus.html %}
 
     {% endif %}
 
@@ -43,5 +25,7 @@ top: blog-post
 	<span class="location">{{ page.location }}</span>
     </address>
 
-</div><!-- End Page -->
+</div>
+
+<!-- End Page -->
 
