--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,4 +14,25 @@
 
 	</body>
 
+	
+<!-- LaTeX -->
+<script type="text/javascript" src="javascript.js">
+  MathJax.Hub.Config({
+  tex2jax: {
+  skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
+  }
+  });
+
+  MathJax.Hub.Queue(function() {
+  var all = MathJax.Hub.getAllJax(), i;
+  for(i=0; i < all.length; i += 1) {
+	       all[i].SourceElement().parentNode.className += ' has-jax';
+	       }
+	       });
+
+code.has-jax {font: inherit; font-size: 100%; background: inherit; border: inherit;}
+</script>
+
+
+
 </html>
