add math support.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,10 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<script
+		   //MathJax support, c.f. [here](https://jekyllrb.com/docs/extras/)
+		   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+		</script>
 	
 		<title>{{ page.title }}</title>
 	</head>
