--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
 
         <footer>
             <hr />
-            <p>{{ site.author }}</p>
+            <p>By {{ site.author }}. E-mail: {{author_email}}</p>
         </footer>
 
         <script src="{{site.baseurl}}/scripts.js"></script>
