--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,13 @@
     
         <nav>
 
+	    <h4>Links</h4>
             <ul>
                 <li><i class="icon-home"></i>   <a href="{{site.baseurl}}/">Home</a></li>
                 <li><i class="icon-mail"></i>   <a href="{{site.baseurl}}/info">INFO</a></li>
                 <li><i class="icon-th"></i>     <a href="{{site.baseurl}}/archive">Archive</a></li>
             </ul>
-
+	    
         </nav>
 
         <main>
