--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,17 +37,15 @@
 
     </body>
 
-    <!--
     <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         tex2jax: {
           skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-          inlineMath: [['\\\\(', '\\\\)'], ['$', '$']],
-          displayMath: [['\\\\[', '\\\\]'], ['$$', '$$']]
+          inlineMath: [['\\(', '\\)'], ['$', '$']],
+          displayMath: [['\\[', '\\]'], ['$$', '$$']]
         }
       });
     </script>
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
-    -->
 
     </html>
